<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/capa_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/usuario_margin_right"
                android:text="@string/texto_usuario"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/texto_usuario_hint"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/clave_margin_right"
                android:text="@string/texto_clave"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtclave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/texto_clave_hint"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btningreso"
            android:onClick="logueoUsuario"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/boton_margin_top"
            android:text="@string/texto_boton" />

    </LinearLayout>

    <TextView
        android:id="@+id/lnkregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/usuario_margin_right"
        android:layout_marginTop="@dimen/registro_margin_top"
        android:text="@string/texto_registro"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/registro_color" />
    
</LinearLayout>